[gd_scene load_steps=5 format=2]

[ext_resource path="res://SuitCase.gd" type="Script" id=1]
[ext_resource path="res://Texture/suit_case_red.png" type="Texture" id=2]
[ext_resource path="res://Texture/suit_case_blue.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 5 )

[node name="SuitCase" type="Node2D"]

script = ExtResource( 1 )
team = "red"

[node name="SpriteRed" type="Sprite" parent="." index="0"]

scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="SpriteBlue" type="Sprite" parent="." index="1"]

scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]


